tests/specs/interface_method.txt
# mod.ts
export interface I {
  m(a, b);
  mo?(c);
  [mc](d);
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export interface I {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   m(a, b);
  |   ^


error[missing-return-type]: exported function is missing an explicit return type annotation
 --> /mod.ts:2:3
  | 
2 |   m(a, b);
  |   ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:3:3
  | 
3 |   mo?(c);
  |   ^


error[missing-return-type]: exported function is missing an explicit return type annotation
 --> /mod.ts:3:3
  | 
3 |   mo?(c);
  |   ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:4:3
  | 
4 |   [mc](d);
  |   ^


error[missing-return-type]: exported function is missing an explicit return type annotation
 --> /mod.ts:4:3
  | 
4 |   [mc](d);
  |   ^

# output.txt
Defined in file:///mod.ts:1:1

interface I

  m(a, b)
  mo?(c)
  [mc](d)


# output.json
[
  {
    "kind": "interface",
    "name": "I",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "interfaceDef": {
      "extends": [],
      "constructors": [],
      "methods": [
        {
          "name": "m",
          "kind": "method",
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 23
          },
          "params": [
            {
              "kind": "identifier",
              "name": "a",
              "optional": false,
              "tsType": null
            },
            {
              "kind": "identifier",
              "name": "b",
              "optional": false,
              "tsType": null
            }
          ],
          "optional": false,
          "returnType": null,
          "typeParams": []
        },
        {
          "name": "mo",
          "kind": "method",
          "location": {
            "filename": "file:///mod.ts",
            "line": 3,
            "col": 2,
            "byteIndex": 34
          },
          "params": [
            {
              "kind": "identifier",
              "name": "c",
              "optional": false,
              "tsType": null
            }
          ],
          "optional": true,
          "returnType": null,
          "typeParams": []
        },
        {
          "name": "mc",
          "kind": "method",
          "location": {
            "filename": "file:///mod.ts",
            "line": 4,
            "col": 2,
            "byteIndex": 44
          },
          "params": [
            {
              "kind": "identifier",
              "name": "d",
              "optional": false,
              "tsType": null
            }
          ],
          "computed": true,
          "optional": false,
          "returnType": null,
          "typeParams": []
        }
      ],
      "properties": [],
      "callSignatures": [],
      "indexSignatures": [],
      "typeParams": []
    }
  }
]
